--- a/src/components/movies/MovieDetails.module.css
+++ b/src/components/movies/MovieDetails.module.css
@@ -120,3 +120,18 @@
 
   border-radius: 10px;
 }
+
+.cast-list span {
+  padding: 0.35rem;
+
+  font-size: 0.75rem;
+  font-weight: 600;
+
+  background-color: #917fb3;
+
+  border-radius: 10px;
+}
+
+.cast-list p {
+  padding: 0.75rem;
+}
