--- a/src/components/movies/MovieCard.module.css
+++ b/src/components/movies/MovieCard.module.css
@@ -62,3 +62,26 @@
 
   font-weight: 600;
 }
+
+.fav-container {
+  position: absolute;
+  top: 10;
+  right: 10;
+  z-index: 10;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 0.5rem;
+
+  border: 0;
+  border-radius: 1000px;
+
+  background-color: #fff;
+  opacity: 60%;
+}
+
+.fav-container img {
+  width: 25px;
+}
