--- a/src/components/movies/Movies.module.css
+++ b/src/components/movies/Movies.module.css
@@ -68,15 +68,46 @@
   background-size: 30px;
 }
 
+.favorites-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 0.75rem;
+
+  border: 0;
+  border-radius: 1000px;
+
+  background-color: #1d1923;
+
+  transition: background-color 0.2s;
+  cursor: pointer;
+  user-select: none;
+}
+
+.favorites-btn:hover {
+  background-color: #000;
+}
+
+.favorites-btn img {
+  width: 30px;
+
+  user-select: none;
+  pointer-events: none;
+}
+
 .error-text {
   display: flex;
   justify-content: center;
+  align-items: center;
+  gap: 0.25rem;
 
-  font-size: 1.5rem;
   font-weight: 600;
 }
 
 .error-text span {
+  font-size: 1.5rem;
+
   color: firebrick;
 }
 
