--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,8 +1,10 @@
 .heading-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
 
-  padding-top: 3rem;
   padding-bottom: 3rem;
 }
 
@@ -18,4 +20,32 @@
   .heading {
     font-size: 3rem;
   }
+}
+
+.nav-link {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  color: #dadeed;
+  background-color: #1d1923;
+
+  padding: 0.75rem 1.5rem;
+
+  border-radius: 0.5rem;
+  border: 0;
+
+  font-weight: 600;
+
+  transition: background-color 0.2s;
+  cursor: pointer;
+  user-select: none;
+}
+
+.nav-link:hover {
+  background-color: #000;
+}
+
+.nav-link img {
+  width: 30px;
 }
